--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -86,8 +86,6 @@
     <string name="action_speech">Речь</string>
     <string name="action_sync">Синхронизация</string>
     <string name="action_torch">Фонарик</string>
-    <string name="action_volume_down">Уменьшение громкости</string>
-    <string name="action_volume_up">Увеличение громкости</string>
     <string name="action_wifi">WIFI</string>
     <string name="action_wifi_ap">Wifi AP</string>
     <string name="add">Добавить…</string>
@@ -102,7 +100,6 @@
     <string name="app_icons">Значки приложений</string>
     <string name="app_info">Информация о прил.</string>
     <string name="app_lost_focus">приложение расфокусировано</string>
-    <string name="app_may_not_has_default_activity">Приложение не имеет действия по умолчанию</string>
     <string name="app_stopped">Приложение остановлено</string>
     <string name="app_thawed_f">Разморозка: %1$s</string>
     <string name="as_default">По умолчанию</string>
@@ -251,7 +248,6 @@
     <string name="key_recent_apps">Недавние приложения</string>
     <string name="key_volume_down">Уменьшение громкости</string>
     <string name="key_volume_up">Увеличение громкости</string>
-    <string name="keycode_overflow">Код кнопки превышает максимум.</string>
     <string name="keys">Клавиши</string>
     <string name="label">Метка:</string>
     <string name="last_day_of_month">Последнее</string>
@@ -413,10 +409,7 @@
     <string name="adjust_up">вверх</string>
     <string name="wifi_ssid">Имя WiFi</string>
     <string name="xposed_not_installed">Xposed не установлен!</string>
-
-
-    <!-- untranslatable -->
-    <!--<string name="description">Этот модуль предоставляет средства управления и действия на уровне системы. Переоформления жеста, ключи, состояние телефона, и т.д ..., чтобы вызвать действия, которые хотите.</string>-->
+    <string name="description">Этот модуль предоставляет средства управления и действия на уровне системы. Переоформления жеста, ключи, состояние телефона, и т.д …, чтобы вызвать действия, которые хотите.</string>
 
     <string name="condition_soft_keyboard_showing">Отображение клавиатуры</string>
     <string name="action_refreeze">Перезаморозить замороженные приложения</string>
@@ -470,7 +463,6 @@
     <string name="redo">Redo</string>
     <string name="undo">Undo</string>
     <string name="action_toast">Toast</string>
-    <string name="icon_color">Icon color</string>
     <string name="user_not_supported">Current user is not supported!!!</string>
     <string name="action_play_sound">Play sound</string>
     <string name="action_vibrate">Vibrate</string>
@@ -550,7 +542,7 @@
     <string name="tile_added">Tile added.</string>
     <string name="tile_removed">Tile removed.</string>
     <string name="gesture_hold_timeout">Hold timeout of sub gesture</string>
-    <string name="real_time_detect_sub_gesture">Real-time detect sub gesture</string>
+    <string name="sub_gesture_triggers_when_swiping">Sub gesture triggers when swiping</string>
     <string name="tile_1">Tile 1</string>
     <string name="tile_2">Tile 2</string>
     <string name="tile_3">Tile 3</string>
@@ -563,5 +555,14 @@
     <string name="tile_10">Tile 10</string>
     <string name="tile_11">Tile 11</string>
     <string name="tile_12">Tile 12</string>
+    <string name="icon_style_in_app">Icon style in app</string>
+    <string name="pie_icon_color">Pie icon color</string>
+    <string name="circle_icon_on_panels">Circle icon on panels</string>
+    <string name="panel_icon_color">Panel icon color</string>
+    <string name="panel_circle_background_color">Panel circle background color</string>
+    <string name="drawer_color">Drawer color</string>
+    <string name="colorful_circle_icon">Colorful circle icon</string>
+    <string name="circle_icon">Circle icon</string>
+    <string name="default_icon">Default icon</string>
 
 </resources>
