--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -102,8 +102,6 @@
     <string name="action_recent_apps">Các ứng dụng gần đây</string>
     <string name="action_menu">Trình đơn</string>
     <string name="action_sleep_wake">Ngủ/đánh thức</string>
-    <string name="action_volume_up">Tăng âm lượng</string>
-    <string name="action_volume_down">Giảm âm lượng</string>
     <string name="action_adjust_volume">Điều chỉnh âm lượng</string>
     <string name="action_media_play_pause">Phát/tạm dừng đa phương tiện</string>
     <string name="action_media_stop">Dừng đa phương tiện</string>
@@ -402,7 +400,6 @@
     <string name="freeze">Đóng băng</string>
     <string name="code">Mã:&#160;</string>
     <string name="click_a_key_to_add">Nhấp vào phím mà bạn muốn thêm.</string>
-    <string name="keycode_overflow">Mã phím bày ra hơn mã phím lớn nhất.</string>
     <string name="xposed_not_installed">Xposed chưa được cài đặt!!!</string>
     <string name="module_not_activated">Module vẫn chưa được kích hoạt(hoặc chưa được cập nhật)! Hãy kích hoạt module này trong trình cài đặt Xposed, và khởi động lại.</string>
     <string name="unable_to_freeze_this_app">Không thể đóng băng ứng dụng này!</string>
@@ -453,7 +450,6 @@
     <string name="vibrate">Rung</string>
     <string name="light">Đèn</string>
     <string name="pie_slide_adjust_support">Phím hình quạt/diều chỉnh trượt/con trở cử chỉ chỉ cho cử chỉ ấn giữ lâu/chạm 2 lần, hoặc vuốt Nếu không bật kích hoạt vuốt sau khi ngón tay lên trên.</string>
-    <string name="app_may_not_has_default_activity">Ứng dụng có thể không có hoạt động mặc định</string>
     <string name="low_priority">Mức ưu tiên thấp</string>
     <string name="perform_failed">Thất bại trong việc thực hiện:&#160;</string>
     <string name="click_to_continue">Nhấp vào để tiếp tục…</string>
@@ -509,9 +505,7 @@
 
     <string name="visit_xda_thread">Ghé thăm chủ đề XDA</string>
     <string name="add_translation_or_fix">Thêm hoặc sửa chữa bản dịch</string>
-
-    <!-- untranslatable -->
-    <!--<string name="description" translatable="false">Mô-đun này cung cấp cho bạn các kiểm soát mức hệ thống và các hành động. Sửa lại cử chỉ, các phím, Trạng thái điện thoại, v.v…, để kích hoạt các hành động mà bạn muốn.</string>-->
+    <string name="description" translatable="false">Mô-đun này cung cấp cho bạn các kiểm soát mức hệ thống và các hành động. Sửa lại cử chỉ, các phím, Trạng thái điện thoại, v.v…, để kích hoạt các hành động mà bạn muốn.</string>
 
     <string name="app_started">Đã bắt đầu</string>
     <string name="app_stopped">Đã dừng</string>
@@ -521,7 +515,6 @@
     <string name="redo">Redo</string>
     <string name="undo">Undo</string>
     <string name="action_toast">Toast</string>
-    <string name="icon_color">Icon color</string>
     <string name="user_not_supported">Current user is not supported!!!</string>
     <string name="action_play_sound">Play sound</string>
     <string name="action_vibrate">Vibrate</string>
@@ -601,7 +594,7 @@
     <string name="tile_added">Tile added.</string>
     <string name="tile_removed">Tile removed.</string>
     <string name="gesture_hold_timeout">Hold timeout of sub gesture</string>
-    <string name="real_time_detect_sub_gesture">Real-time detect sub gesture</string>
+    <string name="sub_gesture_triggers_when_swiping">Sub gesture triggers when swiping</string>
     <string name="tile_1">Tile 1</string>
     <string name="tile_2">Tile 2</string>
     <string name="tile_3">Tile 3</string>
@@ -614,6 +607,15 @@
     <string name="tile_10">Tile 10</string>
     <string name="tile_11">Tile 11</string>
     <string name="tile_12">Tile 12</string>
+    <string name="icon_style_in_app">Icon style in app</string>
+    <string name="pie_icon_color">Pie icon color</string>
+    <string name="circle_icon_on_panels">Circle icon on panels</string>
+    <string name="panel_icon_color">Panel icon color</string>
+    <string name="panel_circle_background_color">Panel circle background color</string>
+    <string name="drawer_color">Drawer color</string>
+    <string name="colorful_circle_icon">Colorful circle icon</string>
+    <string name="circle_icon">Circle icon</string>
+    <string name="default_icon">Default icon</string>
 
 </resources>
 
