--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -98,8 +98,6 @@
     <string name="action_torch">Torcia</string>
     <string name="action_universal_copy">Copia universale</string>
     <string name="action_vibrate">Vibrazione</string>
-    <string name="action_volume_down">Volume giù</string>
-    <string name="action_volume_up">Volume sù</string>
     <string name="action_wifi">WIFI</string>
     <string name="action_wifi_ap">Wifi AP</string>
     <string name="add">Aggiungi…</string>
@@ -120,7 +118,6 @@
     <string name="app_icons">Icone app</string>
     <string name="app_info">Info app</string>
     <string name="app_lost_focus">Stato attivo perso</string>
-    <string name="app_may_not_has_default_activity">"L'app potrebbe non avere un'attività predefinita"</string>
     <string name="app_name">Xposed edge</string>
     <string name="app_name_pro">Xposed edge pro</string>
     <string name="app_started">inizia</string>
@@ -283,7 +280,6 @@
     <string name="hidden_apps">App nascoste nel drawer</string>
     <string name="hide_soft_keyboard">Nascondi tastiera virtuale</string>
     <string name="icon">Icona:</string>
-    <string name="icon_color">Colore icona</string>
     <string name="ignore_edges">Ignora i bordi</string>
     <string name="import_from_free_version">Importa dalla versione gratuita</string>
     <string name="important">Importante</string>
@@ -310,7 +306,6 @@
     <string name="key_recent_apps">Recenti</string>
     <string name="key_volume_down">Volume giù</string>
     <string name="key_volume_up">Volume sù</string>
-    <string name="keycode_overflow">Keycode greeter than max keycode.</string>
     <string name="keys">Tasti</string>
     <string name="label">Etichetta:</string>
     <string name="last_day_of_month">Ultimo</string>
@@ -542,7 +537,7 @@
     <string name="tile_added">Tile added.</string>
     <string name="tile_removed">Tile removed.</string>
     <string name="gesture_hold_timeout">Hold timeout of sub gesture</string>
-    <string name="real_time_detect_sub_gesture">Real-time detect sub gesture</string>
+    <string name="sub_gesture_triggers_when_swiping">Sub gesture triggers when swiping</string>
     <string name="tile_1">Tile 1</string>
     <string name="tile_2">Tile 2</string>
     <string name="tile_3">Tile 3</string>
@@ -555,5 +550,14 @@
     <string name="tile_10">Tile 10</string>
     <string name="tile_11">Tile 11</string>
     <string name="tile_12">Tile 12</string>
+    <string name="icon_style_in_app">Icon style in app</string>
+    <string name="pie_icon_color">Pie icon color</string>
+    <string name="circle_icon_on_panels">Circle icon on panels</string>
+    <string name="panel_icon_color">Panel icon color</string>
+    <string name="panel_circle_background_color">Panel circle background color</string>
+    <string name="drawer_color">Drawer color</string>
+    <string name="colorful_circle_icon">Colorful circle icon</string>
+    <string name="circle_icon">Circle icon</string>
+    <string name="default_icon">Default icon</string>
 
 </resources>
